crates/keron-lang/tests/corpus/errors/parse/reconcile_chain_missing_head.keron
val a: Symlink = symlink(from = "from-a", to = "to-a")
reconcile ~> a
